2-k3s-three-apps/config/app1.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app1-deployment
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: hello-k8s-app1
          image: osmoussao/hello-kubernetes:0.0.1
          ports:
            - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: app1-service
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
