2-k3s-three-apps/config/app3.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app3-deployment
  labels:
    app: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: hello-k8s-app3
          image: osmoussao/hello-kubernetes:0.0.1
          ports:
            - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: app3-service
spec:
  selector:
    app: app3
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
